// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GET /api/v1/vendas/complementares: contrato > admin, busca "ana" 1`] = `
{
  "consultas": [
    "select vendas [id in 22222222-2222-4222-8222-222222222222,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos []",
    "select vendas_recibos [id in r-21,r-31]",
    "select vendas_recibos [venda_id in 11111111-1111-4111-8111-111111111111,22222222-2222-4222-8222-222222222222,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos [venda_id=11111111-1111-4111-8111-111111111111]",
    "select vendas_recibos_complementares [venda_id in 11111111-1111-4111-8111-111111111111,22222222-2222-4222-8222-222222222222,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos_complementares [venda_id=11111111-1111-4111-8111-111111111111]",
  ],
  "result": {
    "body": {
      "current": [
        {
          "id": "l-1",
          "linked_venda_id": "22222222-2222-4222-8222-222222222222",
          "recibo_id": "r-21",
          "related_ids": [
            "l-1",
            "l-2",
          ],
          "resumo": {
            "detalhes": "Hotel - Rio de Janeiro - R$ 800,00",
            "titulo": "Recibo 2001 - Bruno",
          },
          "venda_id": "11111111-1111-4111-8111-111111111111",
        },
        {
          "id": "l-3",
          "linked_venda_id": "33333333-3333-4333-8333-333333333333",
          "recibo_id": "r-31",
          "related_ids": [
            "l-3",
            "l-4",
          ],
          "resumo": {
            "detalhes": "Cruzeiro - Caribe - R$ 999,90",
            "titulo": "Recibo 3001 - Carla",
          },
          "venda_id": "11111111-1111-4111-8111-111111111111",
        },
      ],
      "current_receipt_ids": [
        "r-11",
        "r-12",
      ],
      "suggestions": [
        {
          "cliente_nome": "Anabela",
          "destino_cidade_nome": "Orlando",
          "destino_nome": "Orlando",
          "numero_recibo": "4001",
          "produto_nome": "Ingresso",
          "recibo_id": "r-41",
          "resumo": {
            "detalhes": "Ingresso - Orlando - R$ 10,00",
            "titulo": "Recibo 4001 - Anabela",
          },
          "sale_receipt_ids": [],
          "valor_total": 10,
          "venda_id": "44444444-4444-4444-8444-444444444444",
        },
      ],
    },
    "status": 200,
  },
}
`;

exports[`GET /api/v1/vendas/complementares: contrato > admin, venda com 2 vínculos, sem busca 1`] = `
{
  "consultas": [
    "select vendas [id in 22222222-2222-4222-8222-222222222222,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos [id in r-21,r-31]",
    "select vendas_recibos [venda_id in 11111111-1111-4111-8111-111111111111,22222222-2222-4222-8222-222222222222,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos [venda_id=11111111-1111-4111-8111-111111111111]",
    "select vendas_recibos_complementares [venda_id in 11111111-1111-4111-8111-111111111111,22222222-2222-4222-8222-222222222222,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos_complementares [venda_id=11111111-1111-4111-8111-111111111111]",
  ],
  "result": {
    "body": {
      "current": [
        {
          "id": "l-1",
          "linked_venda_id": "22222222-2222-4222-8222-222222222222",
          "recibo_id": "r-21",
          "related_ids": [
            "l-1",
            "l-2",
          ],
          "resumo": {
            "detalhes": "Hotel - Rio de Janeiro - R$ 800,00",
            "titulo": "Recibo 2001 - Bruno",
          },
          "venda_id": "11111111-1111-4111-8111-111111111111",
        },
        {
          "id": "l-3",
          "linked_venda_id": "33333333-3333-4333-8333-333333333333",
          "recibo_id": "r-31",
          "related_ids": [
            "l-3",
            "l-4",
          ],
          "resumo": {
            "detalhes": "Cruzeiro - Caribe - R$ 999,90",
            "titulo": "Recibo 3001 - Carla",
          },
          "venda_id": "11111111-1111-4111-8111-111111111111",
        },
      ],
      "current_receipt_ids": [
        "r-11",
        "r-12",
      ],
      "suggestions": [],
    },
    "status": 200,
  },
}
`;

exports[`GET /api/v1/vendas/complementares: contrato > busca curta (1 letra) não pesquisa 1`] = `
{
  "consultas": [
    "select vendas [id in 11111111-1111-4111-8111-111111111111]",
    "select vendas_recibos [id in r-11,r-99]",
    "select vendas_recibos [venda_id in 11111111-1111-4111-8111-111111111111,22222222-2222-4222-8222-222222222222]",
    "select vendas_recibos [venda_id=22222222-2222-4222-8222-222222222222]",
    "select vendas_recibos_complementares [venda_id in 11111111-1111-4111-8111-111111111111,22222222-2222-4222-8222-222222222222]",
    "select vendas_recibos_complementares [venda_id=22222222-2222-4222-8222-222222222222]",
  ],
  "result": {
    "body": {
      "current": [
        {
          "id": "l-2",
          "linked_venda_id": "11111111-1111-4111-8111-111111111111",
          "recibo_id": "r-11",
          "related_ids": [
            "l-1",
            "l-2",
          ],
          "resumo": {
            "detalhes": "Aéreo - R$ 1.500,00",
            "titulo": "Recibo 1001 - Cliente",
          },
          "venda_id": "22222222-2222-4222-8222-222222222222",
        },
        {
          "id": "l-5",
          "linked_venda_id": "",
          "recibo_id": "r-99",
          "related_ids": [],
          "resumo": {
            "detalhes": "",
            "titulo": "Recibo - Cliente",
          },
          "venda_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
      "current_receipt_ids": [
        "r-21",
        "r-22",
      ],
      "suggestions": [],
    },
    "status": 200,
  },
}
`;

exports[`GET /api/v1/vendas/complementares: contrato > venda fora do escopo → 404 1`] = `
{
  "consultas": [],
  "result": {
    "body": "Venda nao encontrada.",
    "status": 404,
  },
}
`;

exports[`GET /api/v1/vendas/complementares: contrato > venda sem vínculos 1`] = `
{
  "consultas": [
    "select vendas_recibos []",
    "select vendas_recibos [venda_id in 44444444-4444-4444-8444-444444444444]",
    "select vendas_recibos [venda_id=44444444-4444-4444-8444-444444444444]",
    "select vendas_recibos_complementares [venda_id in 44444444-4444-4444-8444-444444444444]",
    "select vendas_recibos_complementares [venda_id=44444444-4444-4444-8444-444444444444]",
  ],
  "result": {
    "body": {
      "current": [],
      "current_receipt_ids": [
        "r-41",
      ],
      "suggestions": [
        {
          "cliente_nome": "Bruno",
          "destino_cidade_nome": "Rio de Janeiro",
          "destino_nome": "Rio hotel",
          "numero_recibo": "2001",
          "produto_nome": "Hotel",
          "recibo_id": "r-21",
          "resumo": {
            "detalhes": "Hotel - Rio de Janeiro - R$ 800,00",
            "titulo": "Recibo 2001 - Bruno",
          },
          "sale_receipt_ids": [],
          "valor_total": 800,
          "venda_id": "22222222-2222-4222-8222-222222222222",
        },
        {
          "cliente_nome": "Bruno",
          "destino_cidade_nome": "Rio de Janeiro",
          "destino_nome": "Rio hotel",
          "numero_recibo": "2002",
          "produto_nome": null,
          "recibo_id": "r-22",
          "resumo": {
            "detalhes": "Rio de Janeiro - R$ 50,00",
            "titulo": "Recibo 2002 - Bruno",
          },
          "sale_receipt_ids": [],
          "valor_total": 50,
          "venda_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
    },
    "status": 200,
  },
}
`;

exports[`GET /api/v1/vendas/complementares: contrato > venda_id inválido → 400 1`] = `
{
  "consultas": [],
  "result": {
    "body": "venda_id invalido.",
    "status": 400,
  },
}
`;

exports[`GET /api/v1/vendas/complementares: contrato > vendedor com escopo, busca "bruno" 1`] = `
{
  "consultas": [
    "select vendas [id in 11111111-1111-4111-8111-111111111111]",
    "select vendas_recibos [id in r-12]",
    "select vendas_recibos [venda_id in 11111111-1111-4111-8111-111111111111,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos [venda_id=33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos [vendas.company_id in aaaaaaaa-aaaa-4aaa-8aaa-aaaaaaaaaaaa & vendas.vendedor_id in u-1]",
    "select vendas_recibos_complementares [venda_id in 11111111-1111-4111-8111-111111111111,33333333-3333-4333-8333-333333333333]",
    "select vendas_recibos_complementares [venda_id=33333333-3333-4333-8333-333333333333]",
  ],
  "result": {
    "body": {
      "current": [
        {
          "id": "l-4",
          "linked_venda_id": "11111111-1111-4111-8111-111111111111",
          "recibo_id": "r-12",
          "related_ids": [
            "l-3",
            "l-4",
          ],
          "resumo": {
            "detalhes": "Seguro - R$ 300,00",
            "titulo": "Recibo 1002 - Cliente",
          },
          "venda_id": "33333333-3333-4333-8333-333333333333",
        },
      ],
      "current_receipt_ids": [
        "r-31",
      ],
      "suggestions": [
        {
          "cliente_nome": "Bruno",
          "destino_cidade_nome": "Rio de Janeiro",
          "destino_nome": "Rio hotel",
          "numero_recibo": "2001",
          "produto_nome": "Hotel",
          "recibo_id": "r-21",
          "resumo": {
            "detalhes": "Hotel - Rio de Janeiro - R$ 800,00",
            "titulo": "Recibo 2001 - Bruno",
          },
          "sale_receipt_ids": [],
          "valor_total": 800,
          "venda_id": "22222222-2222-4222-8222-222222222222",
        },
        {
          "cliente_nome": "Bruno",
          "destino_cidade_nome": "Rio de Janeiro",
          "destino_nome": "Rio hotel",
          "numero_recibo": "2002",
          "produto_nome": null,
          "recibo_id": "r-22",
          "resumo": {
            "detalhes": "Rio de Janeiro - R$ 50,00",
            "titulo": "Recibo 2002 - Bruno",
          },
          "sale_receipt_ids": [],
          "valor_total": 50,
          "venda_id": "22222222-2222-4222-8222-222222222222",
        },
      ],
    },
    "status": 200,
  },
}
`;
